# mayo

./: .gitignore  Makefile  README.md  pyproject.toml
src/notebooks/: eda.ipynb
