[tool.poetry]
name = "mayo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
Pillow = "^9.2.0"
ipykernel = "^6.15.1"
pyvips = "^2.2.1"
numpy = "^1.23.1"
pandas = "^1.4.3"
matplotlib = "^3.5.2"
opencv-python-headless = "^4.6.0"
kaggle = "^1.5.12"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
